# finnish-dictionary-extension

./: .gitignore  CHANGELOG.md  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: index.html  policy.html
lib/: definition.mts  plugin.mts
scripts/: build-plugin.mjs  generate-licenses.js  pack.js
scripts/FinnWordNet-2.0/: LUEMINUT  NEWS  README  UUTISET
scripts/FinnWordNet-2.0/WNgrind-3.0-FiWN-20120213/: INSTALL  Makefile  Makefile.am  Makefile.in  README_WNgrind_FiWN  config.h  config.h.in  config.status  configure  configure.ac
scripts/FinnWordNet-2.0/WNgrind-3.0-FiWN-20120213/dict/: Makefile  Makefile.am  Makefile.in
scripts/FinnWordNet-2.0/WNgrind-3.0-FiWN-20120213/dict/dbfiles/: Makefile  Makefile.am  Makefile.in
scripts/FinnWordNet-2.0/WNgrind-3.0-FiWN-20120213/doc/: Makefile  Makefile.in
scripts/FinnWordNet-2.0/WNgrind-3.0-FiWN-20120213/doc/html/: Makefile  Makefile.am  Makefile.in
scripts/FinnWordNet-2.0/WNgrind-3.0-FiWN-20120213/doc/man/: Makefile  Makefile.am  Makefile.in
scripts/FinnWordNet-2.0/WNgrind-3.0-FiWN-20120213/doc/pdf/: Makefile  Makefile.am  Makefile.in
scripts/FinnWordNet-2.0/WNgrind-3.0-FiWN-20120213/doc/ps/: Makefile  Makefile.am  Makefile.in
scripts/FinnWordNet-2.0/WNgrind-3.0-FiWN-20120213/src/: Makefile  Makefile.am  Makefile.in
scripts/FinnWordNet-2.0/WNgrind-3.0-FiWN-20120213/src/grind/: Makefile  Makefile.am  Makefile.in  create.c  files.c  globals.c  grind-wnlex.c  grind-wnparse.c  grind-wnparse.h  grind.c  makedb.c  resolve.c  util.c  wn.h  wngrind.h  wnlex.l  wnparse.y
scripts/FinnWordNet-2.0/lex/: LUEMINUT_lex  README_lex  adj.all  adj.pert  adj.ppl  adv.all  noun.Tops  noun.act  noun.animal  noun.artifact  noun.attribute  noun.body  noun.cognition  noun.communication  noun.event  noun.feeling  noun.food  noun.group  noun.location  noun.motive  noun.object  noun.person  noun.phenomenon  noun.plant  noun.possession  noun.process  noun.quantity  noun.relation  noun.shape  (+18 more)
src/: background.ts  bergamot.d.ts  manifest.ts  types.ts
src/content/: App.tsx  BottomSheet.tsx  WordPanel.tsx  WordTooltip.tsx  main.tsx  style.css
src/dictionary/: Dictionary.tsx  index.html  main.tsx  style.css
src/lib/: bergamot.ts  i18n.ts  messages.ts  storage.ts  translation.ts  useLocale.ts  useTranslationProgress.ts
src/licenses/: Licenses.tsx  index.html  licenses.json  main.tsx  style.css
src/settings/: Settings.tsx  index.html  main.tsx  style.css
tests/: definition.test.mts
tests/__snapshots__/: definition.test.mts.snap
(+4 files in other folders)
